--- a/pages/goodDetail/index.module.scss
+++ b/pages/goodDetail/index.module.scss
@@ -38,7 +38,7 @@
 
     .agreement {
         font-size: 3vw;
-        margin: 4vw;
+        padding: 4vw;
         display: flex;
         align-items: center;
         justify-content: center;
